2002-09-20  Derek Price  <derek@ximbiot.com>

	* options.h: Move definition of PATCH_PROGRAM to configure.in.

2002-09-18  Larry Jones  <lawrence.jones@eds.com>

	* client.c (call_in_directory): Don't create admin directory when
	exporting into an existing directory.
	(Reported by Jens Engel <Jens.Engel@marconi.com>.)
	* sanity.sh (basic2): New tests for above.

2002-09-16  Jim Meyering  <meyering@lucent.com>

	* server.c (do_cvs_command): Move declarations of locals, timeout and
	timeout_ptr, `up', out of enclosing `#ifdef SERVER_FLOWCONTROL' block.
	Otherwise, this file would not compile with SERVER_FLOWCONTROL
	turned off.  Patch by Ed Santiago <esm@ascend.com>.

2002-09-15  Larry Jones  <lawrence.jones@eds.com>

	* myndbm.c (mydbm_open): Open the file read/write rather than read-
	only if that's what the user asked for to ensure that the later open
	for write will succeed.
	(Patch submitted by Josh Lehan <cvs@krellan.com>.)

2002-08-28  Larry Jones  <lawrence.jones@eds.com>

	* logmsg.c (do_editor): Fix bug which prevented reusing log messages.
	(Reported by Eric Siegerman <erics@telepres.com>.)

2002-08-16  Derek Price  <derek@ximbiot.com>

	* create_adm.c (Create_Admin): Assume RELATIVE_REPOS is set.
	* server.c (outside_root): Add comment.
	* options.h: Remove RELATIVE_REPOS & CVS_BADROOT.
	* sanity.sh: Remove a lot of !RELATIVE_REPOS cruft from tests.

2002-08-14  Derek Price  <oberon@umich.edu>

	* server.c (server): Dispose of the correct pointer.  Tidy comment.

2002-08-13  Derek Price  <oberon@umich.edu>

	* client.c (get_cvs_port_number): Fix typo in comment.  Add comments.
	* server.c (server): Fix a FIXME.  Remove an errant "const" directive.
	Remove some redundant memory allocation and error handling code.

2002-08-08  Derek Price  <oberon@umich.edu>

	* import.c (import): Surrounded `server_active' with
	#ifdef SERVER_SUPPORT/#endif.
	* commit.c (commit_fileproc, commit_direntproc): Likewise.
	(Patch from John Tytgat  <John.Tytgat@aaug.net>.)
